@@ -41,6 +41,7 @@
 				<li>Added Antonio's set</li>
 				<li>Added Bankruptcy set</li>
 				<li>Added Lost Dragon MvP</li>
+				<li>Fixed Final Strike damage computation</li>
 				<li>Fixed Book of Charms class restriction</li>
 				<li>Fixed Savage pet and Scuba Mask script</li>
 				<li>Fixed weapon and base attack bonus based</li>
